--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "devextreme": "^20.1.7",
+    "devextreme-angular": "^20.1.7",
+    "jquery": "^3.5.1",
+    "ng-circle-progress": "^1.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
